Add RREAS/COMU data

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -8,3 +8,14 @@
   DOI={10.1029/2000jc900072},
   pages={16803–16821}
 }
+
+@article{Santora_2021,
+  title={Diverse integrated ecosystem approach overcomes pandemic-related fisheries monitoring challenges},
+  author={Santora, Jarrod A and Rogers, Tanya L and Cimino, Megan A and Sakuma, Keith M and Hanson, Keith D and Dick, EJ and Jahncke, Jaime and Warzybok, Pete and Field, John C},
+  year={2021},
+  journal={Nature Communications},
+  volume={12},
+  number={1},
+  DOI={10.1038/s41467-021-26484-5},
+  pages={6492}
+}
