Datasets for CCTD, RREAS, KEFJ

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -19,3 +19,22 @@
   DOI={10.1038/s41467-021-26484-5},
   pages={6492}
 }
+
+@article{Iglesias_2023,
+  title={Mesopelagic fishes are important prey for a diversity of predators},
+  author={Iglesias, Ilysa S and Santora, Jarrod A and Fiechter, Jerome and Field, John C},
+  year={2023},
+  journal={Frontiers in Marine Science},
+  volume={10},
+  DOI={10.3389/fmars.2023.1220088/full},
+  pages={1220088}
+}
+
+@misc{USGS_2024,
+  doi = {10.5066/F7WH2N3T},
+  url = {https://www.sciencebase.gov/catalog/item/63113045d34e36012efa10ef},
+  author = {{U.S. Geological Survey,  Alaska Science Center} and {National Park Service} and {University of Alaska Fairbanks}},
+  title = {Intertidal Temperature Data from Kachemak Bay,  Prince William Sound,  Katmai National Park and Preserve,  and Kenai Fjords National Park},
+  publisher = {U.S. Geological Survey},
+  year = {2024}
+}
