--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -26,7 +26,7 @@
   year={2023},
   journal={Frontiers in Marine Science},
   volume={10},
-  DOI={10.3389/fmars.2023.1220088/full},
+  DOI={10.3389/fmars.2023.1220088},
   pages={1220088}
 }
 
