Add ocean basins to woa_sal

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -38,3 +38,15 @@
   publisher = {U.S. Geological Survey},
   year = {2024}
 }
+
+@misc{goas,
+  doi = {10.14284/542},
+  url = {http://www.vliz.be/en/imis?dasid=7842&doiid=613},
+  author = {{Flanders Marine Institute (VLIZ),  Belgium}},
+  keywords = {Boundaries,  Geography},
+  language = {en},
+  title = {Global Oceans and Seas,  version 1},
+  publisher = {Marine Data Archive},
+  year = {2021},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
